# ChangeLog for dev-python/rpy
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Sep 2007; Dirkjan Ochtman (djc) <manuzhai@gmail.com> metadata.xml,
  rpy-1.0_rc3.ebuild:
  New ebuild for bug 190615; thanks to hawking.

  10 Sep 2007; Dirkjan Ochtman (djc) <mail@manuzhai.nl>
  +files/rpy-1.0_rc3-lib-handling.patch,
  +files/rpy-1.0_rc3-version-detect.patch, +files/90rpy, +metadata.xml,
  +rpy-1.0_rc3.ebuild:
  New ebuild for bug 190615, also fixes bug 143396 and moves to numpy (bug
  181653). Thanks to markusle, jokey, hawking.
