@@ -11,14 +11,14 @@ MD5 dd13e1e69e074d1daaf022963305241a files/rpy-1.0_rc3-version-detect.patch 592
 RMD160 536d493f0ad469c6c6508ef0860e92c98d71a948 files/rpy-1.0_rc3-version-detect.patch 592
 SHA256 ab156087a1b8a631630c0dec0362fcfb1e6d8ca8e2deadc4447dbcc6047e44ad files/rpy-1.0_rc3-version-detect.patch 592
 DIST rpy-1.0-RC3.tar.gz 67099 RMD160 a1070e8fdc0ba52bf47b954370c5d5521dfddeaf SHA1 46de1e9b452002bc979260706dfa23bb23ea3969 SHA256 b5397b09e95282e7b1c51bb3d69bef8a18bad1bdae9039f99f950f2045ce7ca6
-EBUILD rpy-1.0_rc3.ebuild 1096 RMD160 d37f522d424733250b07c8e8070bb6b9859a2529 SHA1 f7032f0a5caa004676bc9585e26cd56387590659 SHA256 9d00172c93e4f690c2ba4ac71efad3451b7b119b9419cb9cd82fa5167f85aaa5
-MD5 36d6254ac1cd977a08e9761edec36d2e rpy-1.0_rc3.ebuild 1096
-RMD160 d37f522d424733250b07c8e8070bb6b9859a2529 rpy-1.0_rc3.ebuild 1096
-SHA256 9d00172c93e4f690c2ba4ac71efad3451b7b119b9419cb9cd82fa5167f85aaa5 rpy-1.0_rc3.ebuild 1096
-MISC ChangeLog 573 RMD160 4b677068168bd5bbe5142c35c07d570ce1a7a406 SHA1 07a99ce77ef332c52ed6ac3946982b617e93533f SHA256 4e9904c0d0119bb5855e6d4eaa4cd6d679a4f88d9d5395e5e058f0c90f4b0b23
-MD5 304c1c703b7460228c3357a3139ac0db ChangeLog 573
-RMD160 4b677068168bd5bbe5142c35c07d570ce1a7a406 ChangeLog 573
-SHA256 4e9904c0d0119bb5855e6d4eaa4cd6d679a4f88d9d5395e5e058f0c90f4b0b23 ChangeLog 573
+EBUILD rpy-1.0_rc3.ebuild 1094 RMD160 bdb75dc6decb047b688d69b857baddf004c1bcf8 SHA1 65f49bfe10e0293b5135515fe6d684b0c226350f SHA256 130e80bebd3e664da16f11153abe3043a5afdf134300b75b4487439fcca6792d
+MD5 295455c7bdfe8274c5a02463eb639cc1 rpy-1.0_rc3.ebuild 1094
+RMD160 bdb75dc6decb047b688d69b857baddf004c1bcf8 rpy-1.0_rc3.ebuild 1094
+SHA256 130e80bebd3e664da16f11153abe3043a5afdf134300b75b4487439fcca6792d rpy-1.0_rc3.ebuild 1094
+MISC ChangeLog 707 RMD160 66933706d41b53fc51c879778e5385d2dfb8c6f7 SHA1 5bb5a39d5441474068f1387ad75bf98dc8d0c543 SHA256 e68d8151bed004228c82b7806bd78c06a5da84607d99ce9424de8142f49dc8a8
+MD5 cee3964bed8c6eaa39c977ea17ffb3d4 ChangeLog 707
+RMD160 66933706d41b53fc51c879778e5385d2dfb8c6f7 ChangeLog 707
+SHA256 e68d8151bed004228c82b7806bd78c06a5da84607d99ce9424de8142f49dc8a8 ChangeLog 707
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
 MD5 71c4638c9c88af75b58e5f5cb54fe008 metadata.xml 159
 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f metadata.xml 159
