@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Oct 2007; Christian Faulhammer <opfer@gentoo.org> rpy-1.0_rc3.ebuild:
+  add some quotes and slashes, plus adjusting DESCRIPTION
+
   28 Sep 2007; Dirkjan Ochtman (djc) <manuzhai@gmail.com> metadata.xml,
   rpy-1.0_rc3.ebuild:
   New ebuild for bug 190615; thanks to hawking.
